GERADO MAIS CLASSES PARA INTEGRAÇÃO
